@@ -7,6 +7,7 @@ Schema description HTML tags now removed - CHANGED
 New widget added to display content like features - ADDED
 URL Schema can have validation error - FIXED
 Multiselect fields with {optgroup} sometimes not creating a list - FIXED
+Option added to export max number listings per csv file to fix out of memory issue - FIXED
 
 v1.5.5
 Added charset parameter to case conversion functions - ADDED
